fix: fix blurring Roboto font
The Roboto font is blurred when imported with @fontsource.

This font is now imported using Google Fonts

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -25,7 +25,6 @@
   }
 
   .title {
-    font-weight: 900;
     font-size: 1.6rem;
     margin-left: 5px;
   }
